basic chat - logging - stream - entity

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ COUCHBASE_BUCKET_NAME=ECOM
 COUCHBASE_SCOPE_NAME=AI
 COUCHBASE_VECTOR_COLLECTION_NAME=document
 
-GROK_API_KEY=llama3-70b-8192
-GROK_CHAT_MODEL=
+GROK_API_KEY=
+GROK_CHAT_MODEL=meta-llama/llama-4-maverick-17b-128e-instruct
 
 OPENAI_API_KEY=
