couchbase crud - config - mapstruct - repository - model - service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.couchbase.username=${COUCHBASE_USERNAME:admin}
 spring.couchbase.password=${COUCHBASE_PASSWORD:couchbase}
 
 #spring data couchbase
+#spring.data.couchbase.auto-index=true
 spring.data.couchbase.bucket-name=${COUCHBASE_BUCKET_NAME:COMPANY}
 spring.data.couchbase.scope-name=${COUCHBASE_SCOPE_NAME:AI}
 
