Ai file upload flow - add core module - File event - Listener

--- a/ecom-assistant-ai/pom.xml
+++ b/ecom-assistant-ai/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>spring-ai-starter-vector-store-couchbase</artifactId>
             <version>${spring-ai.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ecom.ai</groupId>
+            <artifactId>ecom-assistant-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
