--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
 		<module>ecom-assistant-db</module>
 		<module>ecom-assistant-api</module>
 		<module>ecom-assistant-ai</module>
-	</modules>
+        <module>ecom-assistant-core</module>
+    </modules>
 	<scm>
 		<connection/>
 		<developerConnection/>
