--- a/ecom-assistant-api/src/main/resources/application.properties
+++ b/ecom-assistant-api/src/main/resources/application.properties
@@ -13,10 +13,13 @@ spring.data.couchbase.bucket-name=${COUCHBASE_BUCKET_NAME:COMPANY}
 spring.data.couchbase.scope-name=${COUCHBASE_SCOPE_NAME:AI}
 
 #spring ai chat
+#spring.ai.openai.api-key=${OPENAI_API_KEY}
+#spring.ai.openai.chat.base-url=https://api.groq.com/openai
+#spring.ai.openai.chat.api-key=${GROK_API_KEY}
+#spring.ai.openai.chat.options.model=${GROK_CHAT_MODEL:meta-llama/llama-4-maverick-17b-128e-instruct}
 spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.chat.base-url=https://api.groq.com/openai
-spring.ai.openai.chat.api-key=${GROK_API_KEY}
-spring.ai.openai.chat.options.model=${GROK_CHAT_MODEL:meta-llama/llama-4-maverick-17b-128e-instruct}
+spring.ai.openai.model=gpt-4o-mini
+
 #spring ai embedding
 spring.ai.openai.embedding.options.model=text-embedding-3-small
 #spring ai vector store
