--- a/ecom-assistant-api/src/main/resources/application.yaml
+++ b/ecom-assistant-api/src/main/resources/application.yaml
@@ -22,10 +22,12 @@ spring:
     openai:
       api-key: ${OPENAI_API_KEY}
       chat:
-        base-url: https://api.groq.com/openai
-        api-key: ${GROK_API_KEY}
+#        base-url: https://api.groq.com/openai
+#        api-key: ${GROK_API_KEY}
+        api-key: ${OPENAI_API_KEY}
         options:
-          model: ${GROK_CHAT_MODEL:meta-llama/llama-4-maverick-17b-128e-instruct}
+#          model: ${GROK_CHAT_MODEL:meta-llama/llama-4-maverick-17b-128e-instruct}
+           model: gpt-4o-mini
       embedding:
         options:
           model: text-embedding-3-small
