--- a/ecom-assistant-db/pom.xml
+++ b/ecom-assistant-db/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>ecom-assistant-core</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ecom.ai</groupId>
+            <artifactId>ecom-assistant-ai</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
