--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
-		<spring-ai.version>1.0.0-RC1</spring-ai.version>
+		<spring-ai.version>1.0.0</spring-ai.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
 	</properties>
 	<dependencies>
