--- a/ecom-assistant-api/src/main/resources/application.yaml
+++ b/ecom-assistant-api/src/main/resources/application.yaml
@@ -52,6 +52,8 @@ file:
 logging:
   level:
     org.springframework.ai.chat.client.advisor: DEBUG
+    org.springframework.data.couchbase: DEBUG
+
 
 
 
