--- a/ecom-assistant-ai/pom.xml
+++ b/ecom-assistant-ai/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>spring-ai-starter-vector-store-couchbase</artifactId>
             <version>${spring-ai.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox-tools -->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox-tools</artifactId>
+            <version>3.0.5</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-advisors-vector-store</artifactId>
