rag refactor - RetrievalAugmentationAdvisor - add context to response

--- a/ecom-assistant-ai/pom.xml
+++ b/ecom-assistant-ai/pom.xml
@@ -46,5 +46,9 @@
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-advisors-vector-store</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.ai</groupId>
+            <artifactId>spring-ai-rag</artifactId>
+        </dependency>
     </dependencies>
 </project>
