QA Generation and PDF Processing

--- a/ecom-assistant-ai/pom.xml
+++ b/ecom-assistant-ai/pom.xml
@@ -24,6 +24,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.ecom.ai</groupId>
+            <artifactId>ecom-assistant-db</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-pdf-document-reader</artifactId>
         </dependency>
